[package]
name = "zeos-caterpillar"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

[lib]
name = "zeos_caterpillar"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
aes = "0.7"
arrayref = "0.3.7"
arrayvec = "0.7.2"
base64 = "0.21.2"
bech32 = "0.9.1"
bellman = { version = "0.14.0", default-features = false, features = ["groth16"] }
pairing = "0.23"
bitvec = "1"
blake2b_simd = "1"
blake2s_simd = "1"
bls12_381 = "0.8"
byteorder = "1"
chacha20poly1305 = "0.10.1"
chrono = { version = "0.4.26", features = ["serde"] }
constant_time_eq = "0.2.5"
ff = "0.13"
fpe = "0.5"
group = { version = "0.13", features = ["wnaf-memuse"] }
hex = { version = "0.4.3", features = ["serde"] }
jubjub = "0.10"
lazy_static = "1"
libc = "0.2.147"
memuse = "0.2.1"
rand = "0.8"
rand_core = "0.6"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
subtle = "2.2.3"
getrandom = { version = "0.2.10", features = ["js"] }

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = "0.2.99"
wasm-bindgen-rayon = { version = "1.3", features = ["no-bundler"], optional = true }

[dev-dependencies]
rand_xorshift = "0.3"
hex-literal = "0.4.1"

[features]
multicore = ["bellman/multicore", "wasm-bindgen-rayon"]
default = ["multicore"]
